--- a/manifest/deployment.yaml
+++ b/manifest/deployment.yaml
@@ -15,20 +15,5 @@ spec:
         app: go-helloworld-2
     spec:
       containers:
-      - image: yunatan/go-helloworld-2
+      - image: ghcr.io/2022-4400-exp/4422-go-helloworld-2:161f29678517dfa4d5e828d523efaa8e16f31c14@sha256:8e439593a5c0e11dde9814d6a4669ba5f5fc7ea5fc85da7d17a6cd9431a9bf28
         name: go-helloworld-2
----
-apiVersion: v1
-kind: Service
-metadata:
-  labels:
-    app: go-helloworld-2
-  name: go-helloworld-2
-spec:
-  ports:
-  - port: 8080
-    protocol: TCP
-    targetPort: 8080
-  selector:
-    app: go-helloworld-2
-  type: NodePort
